fix cursor and text wrap of feedback
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@34132 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_assessments.scss
+++ b/src/main/resources/scss/_assessments.scss
@@ -272,9 +272,14 @@ body.dragging * {
 					color: $tertiary-grey;
 				}
 
+				.message {
+					@include note-body;
+				}
+
 				.footer {
 					.link {
 						color: $primary-blue;
+						cursor: pointer;
 					}
 					span {
 						display: inline-block;
